button back to up z-index fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,5 +11,6 @@ $bgColor: #f8fbff;
         height: 60px;
         color: rgba(61, 22, 89, 0.6);
         cursor: pointer;
+        z-index: 50;
     }
 }
